--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "sass": "^1.56.1",
     "style-component": "^0.0.1",
     "styled-component": "^2.8.0",
